fix and align app to integration tests